--- a/app/views/game/play_paper.html.erb
+++ b/app/views/game/play_paper.html.erb
@@ -1,19 +1,52 @@
-<a href="http://localhost:3000/rock/">Play Rock</a>
-<a href="http://localhost:3000/paper/">Play Paper</a>
-<a href="http://localhost:3000/scissors/">Play Scissors</a>
-
-<h1>YOU PLAYED PAPER!!!</h1>
-
-<img src="http://localhost:3000/assets/images/paper.png" width="200" alt="" />
-
-
-
-<p>
-  The computer played <%= @computer_move %>
-</p>
-
-<img src= <%= @computer_img_url %> width = "200" alt="" />
-
-<% if @computer_move == "paper" %>
-  <h3>You tied!</h3>
-<% end %>
+<div class="container text-center">
+  <hr>
+  <div class="row">
+    <div class="col-md-offset-2 col-md-8">
+      <div class="btn-group btn-group-justified" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+          <a class="btn btn-primary" href="http://localhost:3000/rock/" role="button">Play Rock</a>
+        </div>
+        <div class="btn-group" role="group">
+          <a class="btn btn-info" href="http://localhost:3000/paper/" role="button">Play Paper</a>
+        </div>
+        <div class="btn-group" role="group">
+          <a class="btn btn-primary" href="http://localhost:3000/scissors/" role="button">Play Scissors</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-md-offset-2 col-md-4">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h3 class="panel-title">You played Paper</h3>
+        </div>
+        <div class="panel-body">
+          <img src="http://localhost:3000/assets/images/paper.png" alt="" class="img-responsive"/>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-danger">
+        <div class="panel-heading">
+          <h3 class="panel-title">The computer played <%= @computer_move.capitalize %></h3>
+        </div>
+        <div class="panel-body">
+          <img src= <%= @computer_img_url %> class="img-responsive" alt="" />
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row well well-lg">
+    <div class="col-md-offset-5 col-md-2">
+      <% if @computer_move == "rock" %>
+      <h1><span class="label label-success">You Won!</span></h1>
+      <% elsif @computer_move == "paper" %>
+      <h1><span class="label label-warning">You Tied!</span></h1>
+      <% elsif @computer_move == "scissors" %>
+      <h1><span class="label label-danger">You Lost!</span></h1>
+      <% end %>
+    </div>
+  </div>
+</div>
